Update index.html to use jsx transform in-browser

--- a/website/index.html
+++ b/website/index.html
@@ -18,6 +18,7 @@
 
     <script src="bower_components/react/react.js"></script>
     <script src="bower_components/jquery/dist/jquery.js"></script>
-    <script src="build/navbar.js"></script>
+	<script src="bower_components/react/JSXTransformer.js"></script>
+    <script type="text/jsx" src="jsx/navbar.jsx"></script>
   </body>
 </html>
