Adding mocks for items view

--- a/website/index.html
+++ b/website/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+
+    <link rel="stylesheet" type="text/css" href="css/custom.css">
   </head>
   <body>
 
@@ -14,11 +16,19 @@
           If you can see this, React is not working right.
         </p>
       </div>
+
+      <!-- Let's put some contents here -->
+      <div class="main">
+        <div id="content">
+        </div>
+      </div>
     </div>
 
     <script src="bower_components/react/react.js"></script>
     <script src="bower_components/jquery/dist/jquery.js"></script>
-	<script src="bower_components/react/JSXTransformer.js"></script>
+	  <script src="bower_components/react/JSXTransformer.js"></script>
+
     <script type="text/jsx" src="jsx/navbar.jsx"></script>
+    <script type="text/jsx" src="jsx/item.jsx"></script>
   </body>
 </html>
