Adding board view control and sample data

--- a/website/index.html
+++ b/website/index.html
@@ -29,6 +29,7 @@
 	  <script src="bower_components/react/JSXTransformer.js"></script>
 
     <script type="text/jsx" src="jsx/navbar.jsx"></script>
-    <script type="text/jsx" src="jsx/item.jsx"></script>
+    
+	<script type="text/jsx" src="jsx/board.jsx"></script>
   </body>
 </html>
