--- a/website/index.html
+++ b/website/index.html
@@ -37,7 +37,8 @@
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
     <script type="text/jsx" src="jsx/navbar.jsx"></script>
-    <script type="text/jsx" src="jsx/item.jsx"></script>
 	<script type="text/jsx" src="jsx/board.jsx"></script>
+    <script type="text/jsx" src="jsx/list.jsx"></script>    
+    <script type="text/jsx" src="jsx/item.jsx"></script>
   </body>
 </html>
