Start implementing drag and drop

--- a/website/index.html
+++ b/website/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
 
+    
     <div class="container">
       <div id="kimchi-navbar">
         <p>
@@ -27,10 +28,28 @@
       <!-- Let's put some contents here -->
       <div class="main">
         <div id="content">
-        </div>
+        </div>		
+		<div id="test" ondrop="drop(event)" ondragover="allowDrop(event)" onclick="click">
+			Drop target div
+		</div>
       </div>
     </div>
 
+	<script>
+		function drop(event) {
+			console.log("dropped");
+		}
+		
+		function allowDrop(event) {
+			event.preventDefault();
+		}
+		
+		function click(event)
+		{
+			alert('test');
+		}
+		alert('js');
+	</script>
     <script src="bower_components/react/react.js"></script>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
 	<script src="bower_components/react/JSXTransformer.js"></script>
