--- a/website/index.html
+++ b/website/index.html
@@ -34,6 +34,7 @@
 	
     <script src="bower_components/react/react.js"></script>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
+	<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 	<script src="bower_components/react/JSXTransformer.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
