Added 'new list' form

--- a/website/index.html
+++ b/website/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
 
-    
+
     <div class="container">
       <div id="kimchi-navbar">
         <p>
@@ -19,19 +19,19 @@
       </div>
 
       <div class="infobar">
-        <div class="alert alert-info" id="alertNewItemForm" style="display:none">
+        <div class="alert alert-info" id="alertNewDataForm" style="display:none">
             <a href="#" class="close" data-dismiss="alert">&times;</a>
-            <strong>TODO</strong> Store new item data into the database store.
+            <strong>TODO</strong> Store new data into the database store.
         </div>
       </div>
 
       <!-- Let's put some contents here -->
       <div class="main">
         <div id="content">
-        </div>			
+        </div>
       </div>
     </div>
-	
+
     <script src="bower_components/react/react.js"></script>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
 	<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
@@ -40,7 +40,7 @@
 
     <script type="text/jsx" src="jsx/navbar.jsx"></script>
 	<script type="text/jsx" src="jsx/board.jsx"></script>
-    <script type="text/jsx" src="jsx/list.jsx"></script>    
+    <script type="text/jsx" src="jsx/list.jsx"></script>
     <script type="text/jsx" src="jsx/item.jsx"></script>
   </body>
 </html>
