Adding references to list.jsx to index.html

--- a/website/index.html
+++ b/website/index.html
@@ -31,6 +31,7 @@
     <script type="text/jsx" src="jsx/navbar.jsx"></script>
     <script type="text/jsx" src="jsx/main.jsx"></script>
     <script type="text/jsx" src="jsx/item.jsx"></script>
+	<script type="text/jsx" src="jsx/list.jsx"></script>
 	  <script type="text/jsx" src="jsx/board.jsx"></script>
   </body>
 </html>
