Adding Board dropdown to navbar

--- a/website/index.html
+++ b/website/index.html
@@ -20,6 +20,10 @@
 
     <div id="footer">
     </div>
+	
+	<script>
+		var BoardsData;
+	</script>
 
     <script src="bower_components/react/react.js"></script>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
@@ -27,11 +31,12 @@
 	<script src="bower_components/react/JSXTransformer.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
-    <script type="text/jsx" src="jsx/login.jsx"></script>    
+    <script type="text/jsx" src="jsx/login.jsx"></script>
+	<script type="text/jsx" src="jsx/boardDropdown.jsx"></script>
     <script type="text/jsx" src="jsx/navbar.jsx"></script>
     <script type="text/jsx" src="jsx/main.jsx"></script>
     <script type="text/jsx" src="jsx/item.jsx"></script>
 	<script type="text/jsx" src="jsx/list.jsx"></script>
-	  <script type="text/jsx" src="jsx/board.jsx"></script>
+	<script type="text/jsx" src="jsx/board.jsx"></script>
   </body>
 </html>
