Edit form for list title

--- a/website/index.html
+++ b/website/index.html
@@ -20,7 +20,7 @@
 
     <div id="footer">
     </div>
-	
+
 	<script>
 		var BoardsData;
 	</script>
@@ -30,6 +30,12 @@
 	<script src="bower_components/jqueryui/jquery-ui.js"></script>
 	<script src="bower_components/react/JSXTransformer.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+
+    <link href="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/css/bootstrap-editable.css" rel="stylesheet"/>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
+    <script type="text/javascript">
+        $.fn.editable.defaults.mode = 'popup';
+    </script>
 
     <script type="text/jsx" src="jsx/login.jsx"></script>
 	<script type="text/jsx" src="jsx/boardDropdown.jsx"></script>
