--- a/website/index.html
+++ b/website/index.html
@@ -7,42 +7,38 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 
     <link rel="stylesheet" type="text/css" href="css/custom.css">
-  </head>
-  <body style = "padding-top: 70px; padding-bottom: 60px">
-    <div id="navbar">
-      <p>
-        If you can see this, React is not working right.
-      </p>
-    </div>
 
-    <div id="main">
-    </div>
-
-    <div id="footer">
-    </div>
-
-	<script>
-		var BoardsData;
-	</script>
+    <script>
+        var BoardsData;
+    </script>
 
     <script src="bower_components/react/react.js"></script>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
-	<script src="bower_components/jqueryui/jquery-ui.js"></script>
-	<script src="bower_components/react/JSXTransformer.js"></script>
+    <script src="bower_components/jqueryui/jquery-ui.js"></script>
+    <script src="bower_components/react/JSXTransformer.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
     <link href="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/css/bootstrap-editable.css" rel="stylesheet"/>
     <script src="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
+
     <script type="text/javascript">
         $.fn.editable.defaults.mode = 'popup';
     </script>
 
     <script type="text/jsx" src="jsx/login.jsx"></script>
-	<script type="text/jsx" src="jsx/boardDropdown.jsx"></script>
+    <script type="text/jsx" src="jsx/boardDropdown.jsx"></script>
     <script type="text/jsx" src="jsx/navbar.jsx"></script>
     <script type="text/jsx" src="jsx/main.jsx"></script>
     <script type="text/jsx" src="jsx/item.jsx"></script>
-	<script type="text/jsx" src="jsx/list.jsx"></script>
-	<script type="text/jsx" src="jsx/board.jsx"></script>
+    <script type="text/jsx" src="jsx/list.jsx"></script>
+    <script type="text/jsx" src="jsx/board.jsx"></script>
+  </head>
+  <body id="body">
+    <div id="main">
+      <p>
+        Working on it ...
+      </p>
+    </div>
+
   </body>
 </html>
