--- a/website/index.html
+++ b/website/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Kimchi</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 
@@ -21,10 +22,16 @@
     <link href="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/css/bootstrap-editable.css" rel="stylesheet"/>
     <script src="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
 
-    <script type="text/javascript">
-        $.fn.editable.defaults.mode = 'popup';
-    </script>
+  </head>
+  <body id="body">
+    <div id="fbsdk"></div>
+    <div id="main">
+      <p>
+        Working on it ...
+      </p>
+    </div>
 
+    <script type="text/jsx" src="jsx/splash.jsx"></script>
     <script type="text/jsx" src="jsx/login.jsx"></script>
     <script type="text/jsx" src="jsx/boardDropdown.jsx"></script>
     <script type="text/jsx" src="jsx/navbar.jsx"></script>
@@ -32,13 +39,10 @@
     <script type="text/jsx" src="jsx/item.jsx"></script>
     <script type="text/jsx" src="jsx/list.jsx"></script>
     <script type="text/jsx" src="jsx/board.jsx"></script>
-  </head>
-  <body id="body">
-    <div id="main">
-      <p>
-        Working on it ...
-      </p>
-    </div>
+
+    <script type="text/javascript">
+        $.fn.editable.defaults.mode = 'popup';
+    </script>  
 
   </body>
 </html>
